hphp/hack/test/typecheck/constraints/classmeth_constraints_bad.php.exp
File "classmeth_constraints_bad.php", line 11, characters 6-6:
Invalid argument (Typing[4323])
  File "classmeth_constraints_bad.php", line 6, characters 34-34:
  `T` is a constrained type parameter
  File "classmeth_constraints_bad.php", line 6, characters 39-42:
  This type constraint is violated
  File "classmeth_constraints_bad.php", line 6, characters 39-42:
  Expected `Base`
  File "classmeth_constraints_bad.php", line 11, characters 6-6:
  But got `int`
